--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client_id=9018feb55710e47730f1
+github.client_secret=d6977380c9ce352db9c2a247776972ee3eba610e
+github.redirect_uri=http://localhost:8887/callback
