--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8887
 github.client_id=9018feb55710e47730f1
 github.client_secret=d6977380c9ce352db9c2a247776972ee3eba610e
 github.redirect_uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/communication
+spring.datasource.username=test
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.h2.Driver
