--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
@@ -87,6 +93,7 @@
                         <artifactId>h2</artifactId>
                         <version>1.4.200</version>
                     </dependency>
+
                 </dependencies>
             </plugin>
         </plugins>
