add auto login function

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8887
 github.client_id=9018feb55710e47730f1
-github.client_secret=03fa2a19a3f72fc477eb92d2eb550f7c15180657
+github.client_secret=1410dbfb181e54bc3434b6ce1132b43e4c634462
 github.redirect_uri=http://localhost:8887/callback
 spring.datasource.url=jdbc:h2:~/communication
 spring.datasource.username=test
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
+auto.login.default.token=327269c2-512f-4f2a-9d33-4423ac56a214
